some changes require in reducer

--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -20,7 +20,7 @@
 }
 
 .item{
-    float: left;
+    /* float: left; */
     display: inline-block;
     width: 120px;
     padding: 20px;
@@ -32,4 +32,17 @@
     position: absolute;
     right: 1%;
     top: 1%; 
+}
+
+.cartCount {
+    position: absolute;
+    right: 12px;
+    top: 12px;
+    z-index: 1;
+    background-color: red;
+    padding: 7px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    color: #fff;
 }
